UX changes - Category 101 changes header colors on mobile; common symptoms on mobile width fix; arrow icons fixed to point down when collapsed, up when component is open.

--- a/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_base/less/components/category101/category101.mobile.less
+++ b/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_base/less/components/category101/category101.mobile.less
@@ -3,14 +3,28 @@
 
 @media(max-width: 650px) {
 	.category101 {
+      background-color: @secondaryHueDark;
+
 		.category101Header {
-			.icon-chevron-down {
+			.icon-chevron-up {
 				display: none;
 			}
-			.icon-chevron-up {
-				color: @primaryHueNormal;
+			.icon-chevron-down {
+				color: @secondaryHueLightest;
 				display: inline-block;
 			}
+            a {
+              color: @secondaryHueLightest;
+
+              i {
+                display: none;
+                float: right;
+                font-size: 20px;
+                margin-right: 0px;
+                vertical-align: baseline;
+              }
+
+            }
 		}
 		.category101Mobile {
 			display: block;
@@ -22,13 +36,18 @@
 			display: none;
 		}
 		&.active {
+          background-color: @secondaryHueLighter;
 			.category101Header {
-				.icon-chevron-down {
+				.icon-chevron-up {
+                    color: @secondaryHueDark;
 					display: inline-block;
 				}
-				.icon-chevron-up {
+				.icon-chevron-down {
 					display: none;
 				}
+                a {
+                  color: @secondaryHueDark;
+                }
 			}
 			.category101Body {
 				display: block;
